hadoop_multi_node.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "BVT",
    "Parameters": {
        "InstanceType": {
            "Description": "WebServer EC instance type",
            "Type": "String",
                "Default": "m1.small",
                "AllowedValues": ["m1.small"]
        },
        "KeyName": {
                "Description": "Name of an existing EC2 KeyPair",
                "Type": "String",
                "Default": "hadoop_key"
        }
    },
    "Mappings": {
        "InstanceTypeToImage": {
            "m1.small": {
                "Image": "centos63-x86_64-cfntools"
            }
        }
    },
    "Resources": {
        "BVTSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Standard firewall rules",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8775",
                        "ToPort": "8775",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },
        "Master": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [ "InstanceTypeToImage", {"Ref": "InstanceType"}, "Image" ]
                },
                "InstanceType": {"Ref": "InstanceType"},
                "SecurityGroups": [
                    {
                        "Ref": "BVTSecurityGroup"
                    }
                ],
                "KeyName": {"Ref": "KeyName"},
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -x\n",
                                "export TERM=xterm\n",
                                "service iptables stop\n",
                                "sudo mkdir -p /hadoop_package\n",
                                "sudo mount 192.168.32.1:/opt/drs/hadoop_package /hadoop_package\n",
                                "cp /hadoop_package/hadoop_key.priv  /root/.ssh/id_rsa\n",
                                "sh /hadoop_package/script.master.sh ",
                                {"Fn::GetAtt": ["Node1", "PublicIp"]},
                                " ", {"Fn::GetAtt": ["Node1", "PublicIp"]}, "\n",
                                "export PATH=$PATH:/opt/hadoop-1.2.1/bin\n",
                                "scp  -o StrictHostKeyChecking=no -r /opt/hadoop-1.2.1 ", {"Fn::GetAtt": ["Node1", "PublicIp"]}, ":/opt/"
                            ]
                        ]
                    }
                }
            }
        },
        "Node1": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [ "InstanceTypeToImage", {"Ref": "InstanceType"}, "Image" ]
                },
                "InstanceType": {"Ref": "InstanceType"},
                "SecurityGroups": [ { "Ref": "BVTSecurityGroup" } ],
                "KeyName": {"Ref": "KeyName"},
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -x\n",
                                "export TERM=xterm\n",
                                "service iptables stop\n",
                                "sudo mkdir -p /hadoop_package\n",
                                "sudo mount 192.168.32.1:/opt/drs/hadoop_package /hadoop_package\n",
                                "cp /hadoop_package/hadoop_key.priv  /root/.ssh/id_rsa\n",
                                "yes | /hadoop_package/jdk-6u30-linux-x64-rpm.bin"
                            ]
                        ]
                    }
                }
            }
        }
    },
 
  "Outputs" : {
    "Result" : {
      "Value" : { "Fn::Join" : ["", ["cat /etc/*-release"]] },
      "Description" : "URL for OpenShift Origins console"
    }
  }
}
